# AgentRef

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agentref/: __init__.py  config.py  exceptions.py
agentref/adapters/: __init__.py  autogen.py  base.py  langgraph.py  llamaindex.py
agentref/core/: __init__.py  descriptors.py  invariants.py  reducers.py  reference.py  state.py  types.py
agentref/detection/: __init__.py  framework.py
agentref/storage/: __init__.py  base.py  filesystem.py  memory.py  migrate.py  postgres.py
agentstate/: __init__.py  config.py  exceptions.py
agentstate/adapters/: __init__.py  autogen.py  base.py  langgraph.py  llamaindex.py
agentstate/core/: __init__.py  descriptors.py  invariants.py  reducers.py  reference.py  state.py  types.py
agentstate/detection/: __init__.py  framework.py
agentstate/storage/: __init__.py  base.py  filesystem.py  memory.py  migrate.py  postgres.py
docs/: autogen_limitations.md
examples/: autogen_multi_agent.py  langgraph_rag.py  llamaindex_research_workflow.py
tests/: conftest.py  test_autogen_adapter.py  test_detection.py  test_e2e_workflows.py  test_filesystem_storage.py  test_langgraph_adapter.py  test_llamaindex_adapter.py  test_postgres_storage.py  test_reducers_invariants.py  test_state_metaclass.py  test_storage.py  test_types.py
tests/compatibility/: test_autogen_compatibility.py  test_langgraph_compatibility.py  (+2 more)
