[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstate"
version = "0.1.0"
description = "Type-guided externalized state for LLM agent frameworks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "msgpack>=1.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
llamaindex = ["llama-index-core"]
autogen = ["autogen-agentchat"]
all = ["langgraph>=0.2", "llama-index-core", "autogen-agentchat"]
dev = ["mypy", "pytest"]
bench = ["psutil", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentstate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "compatibility: real framework compatibility tests with optional dependencies",
  "heavy: expensive compatibility tests that require explicit opt-in",
]

[tool.mypy]
python_version = "3.9"
strict = true
explicit_package_bases = true
